services/traefik/overlays/public/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traefik
  namespace: traefik-system
spec:
  template:
    spec:
      containers:
        - name: traefik
